--- a/New/style.css
+++ b/New/style.css
@@ -1741,6 +1741,14 @@ u {
   #home_logo_2026 img {
     width: 560px;
   }
+  #heading_2026 h1 {
+    font-size: 24px !important;
+  }
+  #main_con_2026.why_page_2026 #full_img_con_2026,
+  #main_con_2026.ceo_page_2026 #full_img_con_2026,
+  #main_con_2026.way_page_2026 #full_img_con_2026 {
+        height: 900px;
+  }
   /* 2026 */
   #celebrayion_img_con .elementor-container {
     flex-wrap: wrap;
@@ -1749,6 +1757,15 @@ u {
   #celebrayion_img_con .elementor-container #celebrayion_img_con_coltwo {
     width: 100%;
   }
+}
+@media screen and (max-width: 932px){
+  #heading_2026 h1 {
+    font-size: 22px !important;
+  }
+  .top_breadcrum_2026{
+    margin-bottom: 10px !important;
+  }
+  /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
   #home_logo_2026 img {
@@ -1772,7 +1789,7 @@ u {
   #home_logo_2026 img {
     width: 360px;
   }
-  /* 2026 */
+  /* 2026   */
 }
 @media screen and (max-width: 900px) {
   .elementor-287
@@ -1831,6 +1848,27 @@ u {
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     height: 700px;
+    margin-top: 30px;
+  }
+  #person_degination_con_2026 {
+    margin-top: -90px;
+  }
+  #footer_leftbtn_2026 .elementor-icon-wrapper a,
+  #footer_rightbtn_2026 .elementor-icon-wrapper a,
+  #menu_download_btn_2026 .elementor-button,
+  #print_icon .elementor-shortcode{
+    width: 140px;
+  }
+  #print_icon .pom-default:before {
+    top: 12px;
+  }
+  .top_breadcrum_2026{
+    margin: 0 !important;
+    line-height: 1.3em !important;
+    font-size: 14px !important;
+  }
+  #heading_2026 h1 {
+     font-size: 20px !important;
   }
   /* 2026 */ 
   #dir_click_info .director_details {
@@ -1848,7 +1886,6 @@ u {
     height: 30px;
     font-size: 11px;
   }
-  .top_breadcrum_2026,
   #scroll_col .elementor-widget-wrap .elementor-widget-text-editor {
     font-size: 14px !important;
   } 
@@ -1889,10 +1926,7 @@ u {
   }  
   .elementor-204 .elementor-element.elementor-element-1f4ca591:not(.elementor-motion-effects-element-type-background ) {
     background-position: bottom right -490px !important;
-  }
-  .top_breadcrum_2026 {
-    line-height: 1.3em;
-  }
+  }  
   #celebrayion_img_con #celebrayion_img_con_colone {
     width: 100%;
   }
@@ -1950,7 +1984,7 @@ u {
     z-index: 5;
   }
   ul#menu-2-10cb016 {
-    height: 250px;
+    /* height: 250px; */
     overflow-x: scroll;
   }
   #conclusions_page {
@@ -1966,10 +2000,23 @@ u {
   }
   /* 2026 */
 }
+@media screen and (max-width: 540px){
+  #main_con_2026.why_page_2026 #full_img_con_2026,
+  #main_con_2026.ceo_page_2026 #full_img_con_2026,
+  #main_con_2026.way_page_2026 #full_img_con_2026 {
+        height: 560px;
+        margin-top: 20px;
+  }
+  #person_degination_con_2026 {
+    margin-top: -70px;
+  }
+  /* 2026 */
+}
 @media screen and (max-width: 500px) {
   #heading_2026 h1 {
-    font-size: 22px !important;
+    font-size: 18px !important;
   }
+  /* 2026 */
   .ceo_icon_box  .elementor-widget-container  .elementor-icon-box-wrapper  .elementor-icon-box-content  .elementor-icon-box-title,
   .ceo_icon_box  .elementor-widget-container  .elementor-icon-box-wrapper  .elementor-icon-box-content  .elementor-icon-box-description {
     font-size: 10px !important;
@@ -2031,9 +2078,45 @@ u {
   }
 }
 @media screen and (max-width: 413px) {
-  .elementor-287
-    .elementor-element.elementor-element-de0cfbe
-    .elementor-heading-title {
+  #person_degination_con_2026 .person_degination_title_2026 h5 {
+    font-size: 10px;
+  }
+  /* 2026 */
+  .elementor-287 .elementor-element.elementor-element-de0cfbe  .elementor-heading-title {
     font-size: 24px !important;
   }
+}
+@media screen and (max-width: 391px){
+  #footer_leftbtn_2026 .elementor-icon-wrapper a,
+  #footer_rightbtn_2026 .elementor-icon-wrapper a,
+  #menu_download_btn_2026 .elementor-button,
+  #print_icon .elementor-shortcode {
+        width: 110px;
+  }
+  #print_icon .pom-default:before,
+  #menu_download_btn_2026 .elementor-button .elementor-button-content-wrapper {
+    font-size: 12px;
+  }
+  #print_icon .pom-default:before {
+    top: 15px;
+  }
+  #footer_leftbtn_2026 .elementor-icon-wrapper .elementor-icon,
+  #footer_rightbtn_2026 .elementor-icon-wrapper .elementor-icon {
+    font-size: 18px;
+  }
+  .top_breadcrum_2026{
+    font-size: 12px !important;    
+  }
+  #scroll_col .elementor-widget-wrap .elementor-widget-text-editor {
+    font-size: 12px !important;
+  }
+  #heading_2026 h1 {
+    font-size: 18px !important;
+  }
+  #main_con_2026.way_page_2026 .way_img_title_top_2026 h3,
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3,
+  #person_degination_con_2026 .person_degination_title_2026 h3 {
+    font-size: 12px;
+  }
+  /* 2026 */
 }
